fixed width overflowing

--- a/style.css
+++ b/style.css
@@ -241,8 +241,8 @@ body {
 
 .description[contentEditable="true"] {
   display: block;
-  min-width: 30vw;
-  max-height: 1.5rem;
+  max-width: 30vw;
+  /* max-height: 1.5rem; */
   /* overflow-x: scroll; */
   outline: none;
   padding-left: 5px;
